Update body styles
Refactor CSS styles for body element to use flexbox.

--- a/test.html
+++ b/test.html
@@ -5,12 +5,18 @@
 <title>Love Rain Page</title> 
 
 <style>
-body{
+
+ body{
  margin:0;
-overflow:hidden;
+ overflow:hidden;
  background:black;
  font-family: Arial;
-}
+
+ display:flex;
+ justify-content:center;
+ align-items:center;
+ height:100vh;
+ }
  
 /* Love rain container FIXED */
 .love-rain{
